--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,9 +40,11 @@ dependencies {
     implementation libs.material
     implementation libs.androidx.activity
     implementation libs.androidx.constraintlayout
-    implementation libs.firebase.storage
-    implementation libs.firebase.firestore
+//    implementation libs.firebase.storage
+//    implementation libs.firebase.firestore
     implementation libs.firebase.messaging
+    implementation libs.firebase.config
+    implementation libs.firebase.analytics
     testImplementation libs.junit
     androidTestImplementation libs.androidx.junit
     androidTestImplementation libs.androidx.espresso.core
